# cpp_uriparser

./: .gitignore  .travis.yml  README.md  appveyor.yml
cpp_uriparser/: CMakeLists.txt  build.bat  cmake_build.sh  cpp_uriparser.h  cpp_uriparser_query.h  travihelper_install_deps.sh
cpp_uriparser/dependencies/uriparser-0.8.1/: Makefile.in  configure
cpp_uriparser/dependencies/uriparser-0.8.1/doc/: Makefile.in
cpp_uriparser/dependencies/uriparser-0.8.1/win32/Visual_Studio_2005/: test.vcxproj.filters  uriparser.vcxproj  uriparser.vcxproj.filters
cpp_uriparser/dependencies/uriparser-0.8.2/win32/: uriparser.lib  uriparserd.lib
cpp_uriparser/dependencies/uriparser-0.8.2/win32/Visual_Studio_2005/: test.vcxproj  uriparser.sln  uriparser.vcxproj
cpp_uriparser/testConsole/: CMakeLists.txt  query_test.cpp  testConsole.sln  testMain.cpp  uriparser_test.cpp
cpp_uriparser/testConsole/testConsole/: ReadMe.txt  query_test.cpp  testConsole.cpp  testConsole.vcxproj  testConsole.vcxproj.filters  testMain.cpp  uriparser_test.cpp
